<resources>
    <string name="app_name">Artem Skorik</string>

    <!--    CalculateFragment-->
    <string name="title_add_bmi_details">Add BMI Details</string>
    <string name="label_enter_personal_detail">Enter Personal Detail</string>
    <string name="hint_name">Name</string>
    <string name="label_calculate_bmi">Calculate Your Body Mass Index</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="label_gender">Gender</string>
    <string name="gender_picker_item_male">Male</string>
    <string name="gender_picker_item_female">Female</string>
    <string name="button_calculate">Calculate</string>

    <!--    ResultFragment-->
    <string name="title_bmi_details">BMI Details</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="label_hello">HELLO</string>
    <string name="label_underweight">YOU ARE UNDERWEIGHT</string>
    <string name="label_normal">YOU ARE NORMAL</string>
    <string name="label_overweight">YOU ARE OVERWEIGHT</string>
    <string name="label_normal_bmi">Normal BMI range: 18.5kg/m2 – 25kg/m2</string>
    <string name="label_ponderal_index">Ponderal Index:</string>
    <string name="button_share">Share</string>
    <string name="rate">Rate</string>
    <string name="label_website_name">Website name</string>
    <string name="label_website_description">The Vocabulary is an app with lots of vocabulary to study.</string>
    <string name="label_ad">Ad</string>
    <string name="install">INSTALL</string>
    <string name="description_icon">App icon</string>
    <string name="description_store">Store icon</string>
    <string name="message_couldnt_save">Could\'nt save bitmap</string>
</resources>